--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1642,6 +1642,9 @@ header {
                 background: #FFF;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
               }
+              @media(max-width: 420px){
+                padding-right: 8px;
+              }
 
               .image-box {
                 display: flex;
@@ -1859,6 +1862,9 @@ header {
                 border: 0.578px solid #DDD;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
               }
+              @media(max-width: 420px){
+                padding-right: 8px;
+              }
 
               .image-box {
                 display: flex;
@@ -1923,6 +1929,9 @@ header {
                 border-radius: 6.936px;
                 border: 0.578px solid #DDD;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
+              }
+              @media(max-width: 420px){
+                padding-right: 8px;
               }
 
               .image-box {
@@ -3273,6 +3282,7 @@ header {
               height: 34px;
               padding: 5px;
               border-radius: 4px;
+              margin-top: 5px;
             }
 
             svg {
