--- a/css/style.css
+++ b/css/style.css
@@ -2420,7 +2420,6 @@ header .scrolled {
 @media (max-width: 991px) {
   .benifits-member-section .benifits-member-inner .left-section h2 {
     font-size: 27px;
-    font-weight: 600;
     line-height: 38px;
   }
 }
@@ -2559,6 +2558,11 @@ header .scrolled {
   color: rgba(0, 0, 0, 0.9);
   font-weight: 500;
 }
+@media (max-width: 575px) {
+  .benifits-member-section .benifits-inner-box-wrapper .benifits-box .content-box p span {
+    font-weight: 700;
+  }
+}
 .benifits-member-section .benifits-inner-box-wrapper .benifits-box .content-box .last-para {
   margin-bottom: 0;
 }
@@ -2611,7 +2615,7 @@ header .scrolled {
   color: black;
   font-size: 46px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 56px;
   margin-bottom: 0;
 }
@@ -2709,6 +2713,11 @@ header .scrolled {
 @media (max-width: 766px) {
   .success-stories-section .success-stories-inner .success-stories-container .success-stories-slider-wrapper .success-stories-slider .item .item-inner .title-box h4 {
     min-height: unset;
+  }
+}
+@media (max-width: 575px) {
+  .success-stories-section .success-stories-inner .success-stories-container .success-stories-slider-wrapper .success-stories-slider .item .item-inner .title-box h4 {
+    font-weight: 600;
   }
 }
 .success-stories-section .success-stories-inner .success-stories-container .success-stories-slider-wrapper .success-stories-slider .item .item-inner .paragraph-content {
@@ -2908,6 +2917,7 @@ header .scrolled {
   .management-issues-section .management-issues-inner .left-section h2 {
     font-size: 30px;
     line-height: 40px;
+    font-weight: 700;
   }
 }
 .management-issues-section .management-issues-inner .left-section h2 br {
@@ -2929,7 +2939,7 @@ header .scrolled {
 @media (max-width: 991px) {
   .management-issues-section .management-issues-inner .left-section h4 {
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 700;
     line-height: 40px;
     margin-bottom: 30px;
   }
@@ -3070,6 +3080,19 @@ header .scrolled {
     font-size: 18px;
   }
 }
+@media (max-width: 575px) {
+  .management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box .content-box .desktop-title {
+    display: none;
+  }
+}
+.management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box .content-box .mobile-title {
+  display: none;
+}
+@media (max-width: 575px) {
+  .management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box .content-box .mobile-title {
+    display: block;
+  }
+}
 .management-issues-section .management-issues-inner .right-section .management-issues-inner-box .issues-box:hover {
   background-color: #f5f6f8;
 }
@@ -3170,9 +3193,20 @@ header .scrolled {
   text-decoration: none;
   color: white;
 }
+@media (max-width: 575px) {
+  .footer-section .footer-inner .left-logo-box a {
+    font-size: 18px;
+  }
+}
 .footer-section .footer-inner .left-logo-box a img {
   margin-right: 10px;
   max-width: 25px;
+}
+@media (max-width: 991px) {
+  .footer-section .footer-inner .left-logo-box a img {
+    max-width: 17.629px;
+    margin-right: 7.05px;
+  }
 }
 .footer-section .footer-inner .foote-details {
   margin-right: 172px;
@@ -3200,6 +3234,7 @@ header .scrolled {
     font-size: 20px;
     color: white;
     margin-bottom: 20px;
+    font-weight: 700;
   }
 }
 @media (max-width: 991px) {
