--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -101,7 +101,8 @@ header {
             // font-size: 14.809px;
             line-height: 19.807px;
           }
-          @media(max-width: 575px){
+
+          @media(max-width: 575px) {
             font-size: 18px;
           }
 
@@ -517,12 +518,15 @@ header {
           @media(max-width: 991px) {
             padding-right: 20px;
           }
-          @media(max-width: 374px){
+
+          @media(max-width: 374px) {
             font-size: 29px;
           }
-          .mobile-break{
+
+          .mobile-break {
             display: none;
-            @media(max-width: 575px){
+
+            @media(max-width: 575px) {
               display: block;
             }
           }
@@ -538,26 +542,30 @@ header {
             border-radius: 8px;
             background: rgba(148, 247, 23, 0.50);
             padding: 0 7px;
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               margin-right: 3px;
               padding: 0 6px;
             }
           }
         }
 
-        .desktop-title{
-          @media(max-width: 575px){
+        .desktop-title {
+          @media(max-width: 575px) {
             display: none;
           }
+
           br {
             @media(max-width: 575px) {
               display: none;
             }
           }
         }
-        .mobile-title{
+
+        .mobile-title {
           display: none;
-          @media(max-width: 575px){
+
+          @media(max-width: 575px) {
             display: block;
           }
         }
@@ -579,7 +587,7 @@ header {
             // padding-right: 25px;
           }
 
-          
+
 
           span {
             font-weight: 600;
@@ -675,7 +683,8 @@ header {
             @media(max-width: 991px) {
               gap: 20px;
             }
-            @media(max-width: 374px){
+
+            @media(max-width: 374px) {
               gap: 10px;
               justify-content: space-between;
             }
@@ -706,7 +715,8 @@ header {
                   font-size: 34px;
                   line-height: 44px;
                 }
-                @media(max-width: 355px){
+
+                @media(max-width: 355px) {
                   font-size: 32px;
                 }
               }
@@ -845,7 +855,7 @@ header {
           @media(min-width: 1920px) {
             font-size: 18px;
           }
-          
+
         }
       }
     }
@@ -944,7 +954,8 @@ header {
 
           .star-image {
             margin-top: -4px;
-            @media(max-width: 575px){
+
+            @media(max-width: 575px) {
               display: none;
             }
 
@@ -954,19 +965,22 @@ header {
             }
           }
 
-          .desktop-title{
-            @media(max-width: 575px){
+          .desktop-title {
+            @media(max-width: 575px) {
               display: none;
             }
+
             br {
               @media(max-width: 575px) {
                 display: none;
               }
             }
           }
-          .mobile-title{
+
+          .mobile-title {
             display: none;
-            @media(max-width: 575px){
+
+            @media(max-width: 575px) {
               display: block;
             }
           }
@@ -982,7 +996,8 @@ header {
             @media(min-width: 1920px) {
               font-size: 18px;
             }
-            @media(max-width: 575px){
+
+            @media(max-width: 575px) {
               // padding-right: 29px;
               text-align: center;
               max-width: 95%;
@@ -990,7 +1005,7 @@ header {
               margin-right: auto;
             }
 
-           
+
           }
         }
       }
@@ -1025,7 +1040,8 @@ header {
       grid-template-columns: 1fr;
       gap: 30px;
     }
-    @media(max-width: 575px){
+
+    @media(max-width: 575px) {
       // border-bottom: 1px solid #ddd;
     }
 
@@ -1322,7 +1338,8 @@ header {
           line-height: 38px;
           margin-bottom: 22px;
         }
-        @media(max-width: 374px){
+
+        @media(max-width: 374px) {
           font-size: 25px;
         }
 
@@ -1354,9 +1371,11 @@ header {
           font-size: 18px;
           margin-bottom: 22px;
         }
-        br{
+
+        br {
           display: none;
-          @media(max-width: 575px){
+
+          @media(max-width: 575px) {
             display: block;
           }
         }
@@ -1411,13 +1430,16 @@ header {
         @media(max-width: 991px) {
           line-height: 30px;
         }
-        @media(max-width: 575px){
+
+        @media(max-width: 575px) {
           text-align: center;
           // padding-bottom: 70px;
         }
-        br{
+
+        br {
           display: none;
-          @media(max-width: 575px){
+
+          @media(max-width: 575px) {
             display: block;
           }
         }
@@ -1441,7 +1463,8 @@ header {
       padding: 0;
     }
   }
-  @media(max-width: 575px){
+
+  @media(max-width: 575px) {
     margin-bottom: 80px;
   }
 
@@ -1455,7 +1478,8 @@ header {
       flex-direction: column-reverse;
       gap: 50px;
     }
-    @media(max-width: 575px){
+
+    @media(max-width: 575px) {
       gap: 35px;
     }
 
@@ -1521,7 +1545,8 @@ header {
           // font-weight: 600;
           line-height: 38px;
         }
-        @media(max-width: 575px){
+
+        @media(max-width: 575px) {
           margin-bottom: 22px;
         }
       }
@@ -1566,7 +1591,8 @@ header {
         @media(max-width: 991px) {
           margin-top: 30px;
         }
-        @media(max-width: 575px){
+
+        @media(max-width: 575px) {
           display: none;
         }
 
@@ -1684,7 +1710,8 @@ header {
                 background: #FFF;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
               }
-              @media(max-width: 420px){
+
+              @media(max-width: 420px) {
                 padding-right: 8px;
               }
 
@@ -1904,7 +1931,8 @@ header {
                 border: 0.578px solid #DDD;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
               }
-              @media(max-width: 420px){
+
+              @media(max-width: 420px) {
                 padding-right: 8px;
               }
 
@@ -1927,7 +1955,8 @@ header {
                   height: 28px;
                   padding: 6px;
                 }
-                svg{
+
+                svg {
                   color: #fff;
                 }
 
@@ -1972,7 +2001,8 @@ header {
                 border: 0.578px solid #DDD;
                 box-shadow: 8.67px 8.67px 34.679px 0px rgba(0, 0, 0, 0.05);
               }
-              @media(max-width: 420px){
+
+              @media(max-width: 420px) {
                 padding-right: 8px;
               }
 
@@ -2129,14 +2159,17 @@ header {
       // Animation Box 
     }
   }
+
   // Mobile Link 
-  .mobile-link{
+  .mobile-link {
     display: none;
     padding: 0 20px;
     margin-top: 35px;
-    @media(max-width: 575px){
+
+    @media(max-width: 575px) {
       display: block;
     }
+
     .link-wrapper {
       margin-top: 45px;
 
@@ -2189,6 +2222,7 @@ header {
       }
     }
   }
+
   // Mobile Link 
 }
 
@@ -2258,7 +2292,8 @@ header {
         padding-left: 61px;
         position: relative;
         margin-bottom: 20px;
-        @media(max-width: 991px){
+
+        @media(max-width: 991px) {
           font-size: 17px;
         }
 
@@ -2296,7 +2331,8 @@ header {
           font-weight: 600;
           line-height: 38px;
         }
-        @media(max-width: 575px){
+
+        @media(max-width: 575px) {
           font-size: 27px;
         }
       }
@@ -2490,17 +2526,19 @@ header {
             font-style: normal;
             font-weight: 400;
             line-height: 26px;
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               font-size: 15px;
             }
-            @media(max-width: 365px){
+
+            @media(max-width: 365px) {
               font-size: 14px;
             }
 
             span {
               color: $white;
               text-decoration: underline;
-              
+
             }
           }
         }
@@ -2583,7 +2621,8 @@ header {
                 font-style: normal;
                 font-weight: 400;
                 line-height: 26px;
-                @media(max-width: 991px){
+
+                @media(max-width: 991px) {
                   font-size: 15px;
                 }
 
@@ -2669,7 +2708,7 @@ header {
 
         @media(max-width: 991px) {
           font-size: 27px;
-          font-weight: 600;
+          // font-weight: 600;
           line-height: 38px;
         }
 
@@ -2698,7 +2737,8 @@ header {
         @media(min-width: 1920px) {
           font-size: 18px;
         }
-        @media(max-width: 991px){
+
+        @media(max-width: 991px) {
           margin-bottom: 22px;
         }
       }
@@ -2778,7 +2818,8 @@ header {
             font-size: 20px;
             font-weight: 600;
             line-height: 30px;
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               font-size: 18px;
             }
           }
@@ -2808,6 +2849,10 @@ header {
           span {
             color: rgba(0, 0, 0, 0.90);
             font-weight: 500;
+
+            @media(max-width: 575px) {
+              font-weight: 700;
+            }
           }
         }
 
@@ -2878,7 +2923,7 @@ header {
           // font-family: $font-inter;
           font-size: 46px;
           font-style: normal;
-          font-weight: 600;
+          font-weight: 700;
           line-height: 56px;
           margin-bottom: 0;
 
@@ -2970,6 +3015,10 @@ header {
 
                   @media(max-width: 766px) {
                     min-height: unset;
+                  }
+
+                  @media(max-width: 575px) {
+                    font-weight: 600;
                   }
                 }
               }
@@ -3166,7 +3215,8 @@ header {
       @media(max-width: 1350px) {
         width: 100%;
       }
-      @media(max-width: 991px){
+
+      @media(max-width: 991px) {
         padding-top: 70px;
         border-top: 1px solid #ddd;
       }
@@ -3187,10 +3237,13 @@ header {
         @media(max-width: 991px) {
           font-size: 30px;
           line-height: 40px;
+          font-weight: 700;
         }
-        br{
+
+        br {
           display: none;
-          @media(max-width: 575px){
+
+          @media(max-width: 575px) {
             display: block;
           }
         }
@@ -3206,7 +3259,7 @@ header {
 
         @media(max-width: 991px) {
           font-size: 30px;
-          font-weight: 600;
+          font-weight: 700;
           line-height: 40px;
           margin-bottom: 30px;
         }
@@ -3230,7 +3283,8 @@ header {
         @media(min-width: 1920px) {
           font-size: 18px;
         }
-        @media(max-width: 991px){
+
+        @media(max-width: 991px) {
           margin-bottom: 0;
         }
       }
@@ -3306,7 +3360,8 @@ header {
             padding-top: 19px;
             padding-bottom: 19px;
           }
-          @media(max-width: 991px){
+
+          @media(max-width: 991px) {
             gap: 12px;
             padding: 15px;
             align-items: unset;
@@ -3323,7 +3378,8 @@ header {
             border: 1px solid #ddd;
             background-color: $white;
             transition: 0.3s ease-in-out;
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               width: 34px;
               height: 34px;
               padding: 5px;
@@ -3345,6 +3401,20 @@ header {
 
               @media(min-width: 1920px) {
                 font-size: 18px;
+              }
+            }
+
+            .desktop-title {
+              @media(max-width: 575px) {
+                display: none;
+              }
+            }
+
+            .mobile-title {
+              display: none;
+
+              @media(max-width: 575px) {
+                display: block;
               }
             }
           }
@@ -3382,7 +3452,8 @@ header {
             @media(max-width: 1440px) {
               padding: 14px 30px;
             }
-            @media(max-width: 767px){
+
+            @media(max-width: 767px) {
               padding: 10px 30px;
               width: 100%;
             }
@@ -3411,7 +3482,8 @@ header {
       left: 0;
       bottom: 0;
       z-index: -1;
-      @media(max-width: 991px){
+
+      @media(max-width: 991px) {
         display: none;
       }
     }
@@ -3424,7 +3496,8 @@ header {
 .footer-section {
   background: #23282F;
   padding-top: 51px;
-  @media(max-width: 991px){
+
+  @media(max-width: 991px) {
     padding-top: 50px;
   }
 
@@ -3432,14 +3505,16 @@ header {
     padding-bottom: 45px;
     display: flex;
     flex-direction: row;
-    @media(max-width: 991px){
+
+    @media(max-width: 991px) {
       flex-direction: column;
       padding-bottom: 50px;
     }
 
     .left-logo-box {
       margin-right: 86px;
-      @media(max-width: 991px){
+
+      @media(max-width: 991px) {
         margin-right: 0px;
         margin-bottom: 50px;
       }
@@ -3455,19 +3530,30 @@ header {
         text-decoration: none;
         color: $white;
 
+        @media(max-width: 575px) {
+          font-size: 18px;
+        }
+
         img {
           margin-right: 10px;
           max-width: 25px;
+
+          @media(max-width: 991px) {
+            max-width: 17.629px;
+            margin-right: 7.05px;
+          }
         }
       }
     }
 
     .foote-details {
       margin-right: 172px;
-      @media(max-width: 1199px){
+
+      @media(max-width: 1199px) {
         margin-right: 100px;
       }
-      @media(max-width: 991px){
+
+      @media(max-width: 991px) {
         margin-right: 15px;
       }
 
@@ -3479,25 +3565,29 @@ header {
           font-weight: 600;
           line-height: 28.089px;
           margin-bottom: 17px;
-          @media(max-width: 991px){
+
+          @media(max-width: 991px) {
             font-size: 20px;
             color: $white;
             margin-bottom: 20px;
+            font-weight: 700;
           }
         }
       }
 
       .footer-address {
-        @media(max-width: 991px){
+        @media(max-width: 991px) {
           margin-bottom: 50px;
         }
+
         p {
           color: rgba(255, 255, 255, 0.60);
           font-style: normal;
           font-weight: 400;
           line-height: 28.089px;
           margin-bottom: 10px;
-          @media(max-width: 991px){
+
+          @media(max-width: 991px) {
             font-size: 14px;
             font-weight: 500;
             line-height: 24px;
@@ -3506,7 +3596,8 @@ header {
           a {
             text-decoration: none;
             color: rgba(255, 255, 255, 0.60);
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               font-size: 14px;
               font-weight: 500;
               line-height: 24px;
@@ -3527,7 +3618,8 @@ header {
     .footer-link {
       .title {
         height: 37.09px;
-        @media(max-width: 991px){
+
+        @media(max-width: 991px) {
           display: none;
         }
 
@@ -3541,7 +3633,8 @@ header {
           font-weight: 400;
           line-height: 28.089px;
           margin-bottom: 10px;
-          @media(max-width: 991px){
+
+          @media(max-width: 991px) {
             font-size: 14px;
             font-weight: 500;
             line-height: 24px;
@@ -3550,7 +3643,8 @@ header {
           a {
             text-decoration: none;
             color: rgba(255, 255, 255, 0.60);
-            @media(max-width: 991px){
+
+            @media(max-width: 991px) {
               font-size: 14px;
               font-weight: 500;
               line-height: 24px;
@@ -3572,28 +3666,33 @@ header {
   .footer-copyright {
     background: #2E333A;
     padding: 22px 0;
-    @media(max-width: 991px){
+
+    @media(max-width: 991px) {
       padding: 20px;
     }
 
-    .copyright-desktop{
-      @media(max-width: 575px){
+    .copyright-desktop {
+      @media(max-width: 575px) {
         display: none;
       }
     }
-    .copyright-mobile{
+
+    .copyright-mobile {
       display: none;
-      @media(max-width: 575px){
+
+      @media(max-width: 575px) {
         display: block;
       }
     }
+
     p {
       text-align: center;
       margin-bottom: 0;
       color: $white;
       font-weight: 500;
       line-height: 26px;
-      @media(max-width: 991px){
+
+      @media(max-width: 991px) {
         text-align: left;
       }
     }
