margin top in price

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1158,6 +1158,7 @@ header {
                     width: 26.876px;
                     height: 26.876px;
                     padding: 4.824px 4.823px 4.824px 4.824px;
+                    margin-top: 5px;
                   }
 
                   img {
