--- a/css/style.css
+++ b/css/style.css
@@ -1024,6 +1024,7 @@ header .scrolled {
     width: 26.876px;
     height: 26.876px;
     padding: 4.824px 4.823px 4.824px 4.824px;
+    margin-top: 5px;
   }
 }
 .billing-section-outer .billing-section-inner .left-section .left-bill-inner-section .top-bill-section .bill-box .electricity-billed-box .left-image-box .image-box img {
