--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1184,7 +1184,7 @@ header {
                   line-height: 20px;
 
                   @media(max-width: 991px) {
-                    font-size: 14px;
+                    font-size: 12px;
                     // font-size: 8.269px;
                     // line-height: 13.782px;
                   }
@@ -2680,7 +2680,7 @@ header {
     @media(max-width: 991px) {
       flex-direction: column;
       gap: 22px;
-      padding-bottom: 80px;
+      padding-bottom: 60px;
     }
 
     .left-section {
@@ -3241,6 +3241,7 @@ header {
           font-size: 30px;
           line-height: 40px;
           font-weight: 700;
+          margin-bottom: 10px;
         }
 
         br {
