--- a/css/style.css
+++ b/css/style.css
@@ -3741,6 +3741,7 @@ header .scrolled {
   line-height: 26px;
 }
 .about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .bottom-image-section .image-wrapper {
+  margin-bottom: 50px;
   border-radius: 18px;
   border: 2px solid white;
   overflow: hidden;
@@ -3749,6 +3750,17 @@ header .scrolled {
   width: 100%;
   object-fit: cover;
   height: 518px;
+}
+.about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .bottom-video-section .video-wrapper {
+  height: 518px;
+  overflow: hidden;
+  border-radius: 18px;
+  border: 2px solid white;
+}
+.about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .bottom-video-section .video-wrapper video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .greeting-section-wrapper {
