--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -47,6 +47,7 @@
             }
             .bottom-image-section{
                 .image-wrapper{
+                    margin-bottom: 50px;
                     border-radius: 18px;
                     border: 2px solid $white;
                     overflow: hidden;
@@ -56,6 +57,21 @@
                         object-fit: cover;
                         // object-position: bottom;
                         height: 518px;
+                    }
+                }
+            }
+            .bottom-video-section{
+                .video-wrapper{
+                    height: 518px;
+                    overflow: hidden;
+                    border-radius: 18px;
+                    border: 2px solid $white;
+                    video{
+                        width: 100%;
+                        height: 100%;
+                        // height: 518px;
+                        object-fit: cover;
+                        // object-position: top;
                     }
                 }
             }
