--- a/css/style.css
+++ b/css/style.css
@@ -3727,11 +3727,11 @@ header .scrolled {
   color: black;
   font-size: 52px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 62px;
 }
 .about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .top-section .right-section {
-  width: 495px;
+  width: 540px;
 }
 .about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .top-section .right-section p {
   margin-bottom: 0;
@@ -3739,6 +3739,7 @@ header .scrolled {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+  font-size: 18px;
 }
 .about-top-section-wrapper .about-top-section-inner .about-top-inner-wrapper .bottom-image-section .image-wrapper {
   margin-bottom: 50px;
@@ -3779,7 +3780,7 @@ header .scrolled {
   color: black;
   font-size: 46px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 56px;
   margin-bottom: 43px;
 }
@@ -3794,7 +3795,7 @@ header .scrolled {
   color: black;
   font-size: 28px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 38px;
   margin-bottom: 20px;
 }
@@ -3803,9 +3804,10 @@ header .scrolled {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+  font-size: 18px;
 }
 .greeting-section-wrapper .greeting-section-inner .right-section p:last-child {
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 0;
 }
 
@@ -3844,7 +3846,7 @@ header .scrolled {
   color: black;
   font-size: 46px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 700;
   line-height: 56px;
   margin-bottom: 0;
 }
@@ -3938,6 +3940,7 @@ header .scrolled {
   font-style: normal;
   font-weight: 400;
   line-height: 26px;
+  font-size: 18px;
 }
 .latest-news-section .latest-news-inner .latest-news-inner-box .news-box .link-wrapper {
   margin-bottom: 0;
